# tweakio-sdk

./: Custom_logger.py  README.md  _Media.py  pyproject.toml  requirements.txt  setup.py  test_profile_manager.py
DepreciatedFiles__0_1_5_V_of_pypi/: ChatLoader.py  Errors.py  Extra.py  MessageProcessor.py  Reply.py  _Humanize.py  _Media.py  login.py  sql_lite_storage.py  unread_handler.py
src/: directory.py
src/BrowserManager/: __init__.py  browser_config.py  camoufox_browser.py  platform_manager.py  profile_info.py  profile_manager.py
src/Exceptions/: base.py
src/FIlter/: message_filter.py
src/Interfaces/: Chat_Interface.py  Chat_processor_Interface.py  Humanize_Operation_Interface.py  Login_Interface.py  Media_Capable_Interface.py  Message_Interface.py  Message_Processor_Interface.py  Reply_Capabale_Interface.py  Storage_Interface.py  browser_interface.py  chat_interface.py  chat_processor_interface.py  humanize_operation_interface.py  login_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py  web_ui_selector.py
src/StorageDB/: sqlalchemy_storage.py  sqlite_db.py
src/WhatsApp/: Chat_Processor.py  Humanized_Opeartions.py  Media.py  Message_Processor.py  Reply.py  WebUISelector.py  chat_processor.py  humanized_operations.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
tests/unit/BrowserManager/: test_camoufox_browser.py  test_profile_manager.py
tests/unit/WhatsApp/: test_Chat_Processor.py  test_Humanized_Operations.py  (+1 more)
